Attempt to fix a vertical alignment glitch in Firefox on PC
Another potential fix for issue #98. Needs verification.

--- a/src/assets/sass/modules/_layout-shared.scss
+++ b/src/assets/sass/modules/_layout-shared.scss
@@ -646,6 +646,7 @@ span.spinner {
 .txp-form-field-label,
 .txp-form-field-value {
     max-width: 29em; // 377px / 13px
+    vertical-align: top;
 }
 
 /**
